--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node --watch index.js",
-    "dev": "node --watch index.js"
+    "dev": "node --watch index.js",
+    "prestart": "npm i"
   },
   "keywords": [],
   "author": "",
